log
Fri 09 Sep 2022 12:20:51 PM UTC: 
 tests:  0|6
total_score: 0/70
65edf6b
Fri 09 Sep 2022 12:39:13 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:9: error: unused variable ‘primer_dato’ [-Werror=unused-variable]
   58 |   char* primer_dato = map->buckets[0]->value;
      |         ^~~~~~~~~~~
hashmap.c:57:9: error: unused variable ‘primera_clave’ [-Werror=unused-variable]
   57 |   char* primera_clave = map->buckets[0]->key;
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d36b933
Fri 09 Sep 2022 12:46:52 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   60 |   long* map->size = 0;
      |            ^~
hashmap.c:60:12: error: expected expression before ‘->’ token
hashmap.c:61:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   61 |   long* map->capacity = capacity;
      |            ^~
hashmap.c:61:12: error: expected expression before ‘->’ token
hashmap.c:62:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   62 |   long* map->current = map->buckets[0];
      |            ^~
hashmap.c:62:12: error: expected expression before ‘->’ token
hashmap.c:58:9: error: unused variable ‘primer_dato’ [-Werror=unused-variable]
   58 |   char* primer_dato = map->buckets[0]->value;
      |         ^~~~~~~~~~~
hashmap.c:57:9: error: unused variable ‘primera_clave’ [-Werror=unused-variable]
   57 |   char* primera_clave = map->buckets[0]->key;
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2361b31
Fri 09 Sep 2022 12:47:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘.’ token
   60 |   long* map.size = 0;
      |            ^
hashmap.c:60:12: error: expected expression before ‘.’ token
hashmap.c:61:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   61 |   long* map->capacity = capacity;
      |            ^~
hashmap.c:61:12: error: expected expression before ‘->’ token
hashmap.c:62:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   62 |   long* map->current = map->buckets[0];
      |            ^~
hashmap.c:62:12: error: expected expression before ‘->’ token
hashmap.c:58:9: error: unused variable ‘primer_dato’ [-Werror=unused-variable]
   58 |   char* primer_dato = map->buckets[0]->value;
      |         ^~~~~~~~~~~
hashmap.c:57:9: error: unused variable ‘primera_clave’ [-Werror=unused-variable]
   57 |   char* primera_clave = map->buckets[0]->key;
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
eed1791
Fri 09 Sep 2022 12:47:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   61 |   long* map->capacity = capacity;
      |            ^~
hashmap.c:61:12: error: expected expression before ‘->’ token
hashmap.c:62:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   62 |   long* map->current = map->buckets[0];
      |            ^~
hashmap.c:62:12: error: expected expression before ‘->’ token
hashmap.c:58:9: error: unused variable ‘primer_dato’ [-Werror=unused-variable]
   58 |   char* primer_dato = map->buckets[0]->value;
      |         ^~~~~~~~~~~
hashmap.c:57:9: error: unused variable ‘primera_clave’ [-Werror=unused-variable]
   57 |   char* primera_clave = map->buckets[0]->key;
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c4f5287
Fri 09 Sep 2022 12:47:35 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:16: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   62 |   map->current = map->buckets[0];
      |                ^
hashmap.c:58:9: error: unused variable ‘primer_dato’ [-Werror=unused-variable]
   58 |   char* primer_dato = map->buckets[0]->value;
      |         ^~~~~~~~~~~
hashmap.c:57:9: error: unused variable ‘primera_clave’ [-Werror=unused-variable]
   57 |   char* primera_clave = map->buckets[0]->key;
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fed4993
